fixed dark mode color

--- a/public/styles.css
+++ b/public/styles.css
@@ -278,7 +278,7 @@ td, th, tr{
 }
 
 .dark-mode {
-    background-color: #121212 ;
+    background-color: #202124 ;
     color: #fff;
 }
 
